--- a/cryptoios/Podfile
+++ b/cryptoios/Podfile
@@ -9,4 +9,6 @@ target 'cryptoios' do
   pod 'Charts'
   pod "PromiseKit", "6.5.2"
   pod 'web3swift', :git => 'https://github.com/bankex/web3swift.git'
+  pod 'BlockiesSwift'
+
 end
